# GPBoost

./: .Rhistory  .gitignore  .readthedocs.yml  CMakeIntegratedOpenCL.cmake  CMakeLists.txt  LICENSE  README.html  README.md  VERSION.txt  build-cran-package.sh  build_r.R  build_r_documentation.R
.github/workflows/: r.yml
CSparse/Include/: cs.h
R-package/: .Rbuildignore  DESCRIPTION  NAMESPACE  README.html  README.md  configure  configure.ac  configure.win
R-package/R/: GPModel.R  aliases.R  boost.model.dt.tree.R  callback.R  feature.importance.R  gpb.Booster.R  gpb.Dataset.R  gpb.GPModel.R  gpb.Predictor.R  gpb.convert_with_rules.R  gpb.cv.R  gpb.importance.R  gpb.interprete.R  gpb.model.dt.tree.R  gpb.plot.importance.R  gpb.plot.interpretation.R  gpb.plot.partial.dependence.R  gpb.prepare.R  gpb.prepare2.R  gpb.prepare_rules.R  gpb.prepare_rules2.R  gpb.train.R  gpb.unloader.R  gpboost.R  interprete.R  metrics.R  readRDS.gpb.Booster.R  saveRDS.gpb.Booster.R  shared_pars_others.R  utils.R
R-package/data/: GPBoost_data.RData
R-package/demo/: 00Index  GPBoost_algorithm.R  Gaussian_process_mixed_effects_models.R  Grabit.R  Grabit_and_mean-scale_regression.R  boosting.R  classification_non_Gaussian_data.R  combined_boosting_GP_random_effects.R  compare_usage_lme4_gpboost.R  cross_validation.R  examples_in_R_package_documentation.R  generalized_linear_Gaussian_process_mixed_effects_models.R  linear_Gaussian_process_mixed_effects_models.R  parameter_tuning.R
R-package/inst/: CITATION  make-r-def.R
R-package/man/: GPBoost_data.Rd  GPModel.Rd  GPModel_shared_params.Rd  X.Rd  X_test.Rd  agaricus.test.Rd  agaricus.train.Rd  bank.Rd  boost.model.dt.tree.Rd  coords.Rd  coords_test.Rd  dim.Rd  dimnames.gpb.Dataset.Rd  feature.importance.Rd  fit.GPModel.Rd  fit.Rd  fit.gpb.GPModel.Rd  fitGPModel.Rd  get_aux_pars.GPModel.Rd  get_aux_pars.Rd  get_coef.GPModel.Rd  get_coef.Rd  get_cov_pars.GPModel.Rd  get_cov_pars.Rd  get_nested_categories.Rd  getinfo.Rd  gpb.Dataset.Rd  gpb.Dataset.construct.Rd  gpb.Dataset.create.valid.Rd  gpb.Dataset.save.Rd  gpb.Dataset.set.categorical.Rd  gpb.Dataset.set.reference.Rd  gpb.convert_with_rules.Rd  gpb.cv.Rd  gpb.dump.Rd  gpb.get.eval.result.Rd  gpb.grid.search.tune.parameters.Rd  gpb.importance.Rd  gpb.interprete.Rd  gpb.load.Rd  (+39 more)
R-package/src/: Makevars.in  Makevars.win  Makevars.win.in  R_object_helper.h  gpboost-win.def  gpboost_R.cpp  gpboost_R.h  install.libs.R
R-package/tests/: testthat.R
Release/: lib_gpboost.exp  lib_gpboost.lib
data/: README.md  gdp_european_regions.csv  shape_European_regions.dbf  shape_European_regions.prj  shape_European_regions.shp  shape_European_regions.shx
docs/: Computational_efficiency.md  Computational_efficiency.rst  Examples.rst  Installation_guide.rst  Main_parameters.rst  Makefile  Parameters.rst  Python-API.rst  Python_package.rst  README.rst  R_package.rst  conf.py  index.rst  latex_preamble.tex  make.bat  requirements.txt
examples/: European_GDP_spatial_grouped_data.Rmd  European_GDP_spatial_grouped_data.html  GPBoost_demo.Rmd  GPBoost_demo.html  README.html  README.md  buttonstyle.css  hideOutput.js
examples/python-guide/: GPBoost_algorithm.py  GPBoost_algorithm_blog_post_example.py  Gaussian_process_mixed_effects_models_example.py  Grabit_and_mean-scale_regression.py  Grabit_demo.py  README.html  README.md  boosting.py  boosting_example.py  classification_non_Gaussian_data.py  combined_GPBoost_example.py  combined_boosting_GP_example.py  combined_boosting_mixed_effects_example.py  cross_validation.py  cross_validation_example.py  generalized_linear_Gaussian_process_mixed_effects_models.py  gp_model.json  linear_Gaussian_process_mixed_effects_models.py  panel_data_example.py  parameter_tuning.py  sklearn_example.py
external_libs/LBFGSpp/: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md
external_libs/OptimLib/: optim.hpp
gpboost_r/: .Rbuildignore  DESCRIPTION  LICENSE  README.html  README.md
gpboost_r/R/: .Rhistory  Predictor.R  callback.R  gpb.Booster.R  gpb.Dataset.R  gpb.cv.R  gpb.prepare2.R  gpb.train.R  shared_pars_others.R
gpboost_r/demo/: .Rhistory  boosting.R  combined_boosting_GP_random_effects.R  cross_validation.R
gpboost_r/man/: GPModel.Rd  agaricus.test.Rd  boost.model.dt.tree.Rd  dimnames.gpb.Dataset.Rd  feature.importance.Rd  fitGPModel.Rd  gpb.Dataset.Rd  gpb.Dataset.create.valid.Rd  gpb.Dataset.set.reference.Rd  gpb.cv.Rd  gpb.dump.Rd  gpb.load.Rd  gpb.save.Rd  gpb.train.Rd  predict.gpb.Booster.Rd  predict.gpb.GPModel.Rd  summary.gpb.GPModel.Rd
gpboost_r/tests/: testthat.R
helpers/: R_package_tune_pars_bayesian_optimization.R  build_r_documentation.R  check_R_package_rhub.R  check_dynamic_dependencies.py  coverage_tests_r_package.R  generate_data_for_R_doc_examples.R  get_R_signatures.py  parameter_generator.py  run_tests_coverage_R_package.R  unify_gpboost_treeshap.R
include/GPBoost/: CG_utils.h  DF_utils.h  GP_utils.h  OptimLib_utils.h  R_object_helper.h  Vecchia_utils.h  cov_fcts.h  egpd_utils.h  export.h  gpboost_c_api.h  gpboost_r_api.h  likelihoods.h  log.h  optim_utils.h  re_comp.h  re_model.h  re_model_template.h  sparse_matrix_utils.h  tweedie_utils.h  type_defs.h  utils.h
include/LightGBM/: R_object_helper.h  bin.h  c_api.h  config.h  dataset.h  export.h  feature_group.h  lightgbm_R.h  meta.h  metric.h  nesterov_boosting.h  network.h  objective_function.h  train_share_states.h  tree.h  tree_learner.h
python-package/: MANIFEST.in  README.html  README.md  README.rst  setup.py
python-package/build_cpp/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  _gpboost.vcxproj  _gpboost.vcxproj.filters  cmake_install.cmake  gpboost.sln  gpboost.vcxproj  gpboost.vcxproj.filters
python-package/gpboost/: VERSION.txt  __init__.py  basic.py  callback.py  compat.py  engine.py  libpath.py  plotting.py  sklearn.py
python-package/gpboost.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
swig/: StringArray.hpp
(+263 files in other folders)
